<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingBottom="10sp"
        android:paddingTop="20sp"
        android:paddingStart="5sp"
        android:text="@string/language"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        >

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hungarian"
            android:textColor="@color/black"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/black"

           />


    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingTop="50sp"
        android:paddingBottom="10sp"
        android:paddingStart="5sp"
        android:text="@string/rateUs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"/>
        <ImageView
            android:id="@+id/star2"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"/>
        <ImageView
            android:id="@+id/star3"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"/>
        <ImageView
            android:id="@+id/star4"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"/>
        <ImageView
            android:id="@+id/star5"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/star"/>

    </LinearLayout>


</LinearLayout>